# ideate

./: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  prd-1.json  progress-1.txt  vite.config.ts
.github/workflows/: build.yml  release.yml
scripts/: build-outray.sh  create_macos_icons.py  fix_icon.py  generate_macos_icons.py
scripts/ralph/: .last-branch  prd.json  progress.txt
scripts/ralph/archive/2026-01-10-ideate-mvp/: prd.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/amp/.ideate/: costs.json
src-tauri/capabilities/: default.json
src-tauri/icons/dark/: icon.icns
src-tauri/icons/light/: icon.icns
src-tauri/icons/transparent/: icon.icns
src-tauri/src/: agents.rs  ideas.rs  lib.rs  macos.rs  main.rs  models.rs  preferences.rs  preview_server.rs  process.rs  projects.rs  stacks.rs  terminal.rs  ui_state.rs  usage.rs  utils.rs  worktree.rs
src-tauri/src/integrations/: mod.rs  outray.rs
src/components/: AboutModal.tsx  AgentPanel.tsx  AgentRunView.tsx  AgentSettings.tsx  BuildControls.tsx  BuildStatusContent.tsx  CodeViewer.tsx  CommandPalette.tsx  ConfirmDeleteModal.tsx  ConflictResolver.tsx  CostModal.tsx  CreateIdeaModal.tsx  CreateStoryModal.tsx  DeleteProjectModal.tsx  DesignContent.tsx  DiffViewer.tsx  DisclaimerModal.tsx  EditStoryModal.tsx  ErrorBoundary.tsx  FileViewer.tsx  GenerateStoriesModal.tsx  IdeaDetailView.tsx  IdeaInputView.tsx  ImportProjectModal.tsx  KeyboardShortcutsModal.tsx  LogPanel.tsx  MainContent.tsx  NewProjectModal.tsx  OverviewContent.tsx  PermissionsModal.tsx  PrdGeneratingView.tsx  PreferencesWindow.tsx  PreviewPanel.tsx  PreviousLogsPanel.tsx  ProcessHistoryContent.tsx  ProcessHistoryView.tsx  ProjectContextMenu.tsx  ProjectLayout.tsx  ProjectSettingsModal.tsx  ProjectTopBar.tsx  (+15 more)
src/hooks/: useAgentSession.ts  useBuildLoop.ts  useDevServer.ts  useIdeaGeneration.ts  useKeyboardNavigation.ts  useModalKeyboard.ts  usePrdGeneration.ts  useProjectState.ts  useTheme.ts  useTunnel.ts  useWindowState.ts
src/stores/: agentStore.ts  buildStore.ts  costStore.ts  ideasStore.ts  integrationsStore.ts  panelStore.ts  prdStore.ts  processStore.ts  projectStore.ts  promptStore.ts  stacksStore.ts  terminalStore.ts  themeStore.ts
src/themes/: index.ts
src/types/: agents.ts  index.ts  plugin.ts  prd.ts
src/utils/: agentPricing.ts  devServerDetection.ts  exportPdf.ts  markdownToAnsi.ts  notify.ts  prompts.ts  storyComplexity.ts  storyDependencies.ts  storyTemplates.ts  streamJsonFormatter.ts  terminalThemes.ts
src/windows/: ProcessViewerWindow.tsx  StoryManagerWindow.tsx
tasks/: prd-1.json  prd-ideate-macos-testing.md  prd-ideate.md  prd.json  progress-1.txt  progress.txt
