[package]
name = "ideate"
version = "0.1.0"
description = "AI-Powered App Development Platform"
authors = ["Kevin Elliott"]
edition = "2021"

[lib]
name = "ideate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ideate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
