[package]
name = "Ideate"
version = "0.1.0"
description = "AI-Powered App Development Platform"
authors = ["Kevin Elliott"]
edition = "2021"

[lib]
name = "ideate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "Ideate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
glob = "0.3"
dirs = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
portable-pty = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSImage", "NSMenu", "NSMenuItem"] }
dispatch = "0.2"
